Added section for TCN hyperparameter optimization

--- a/PIR_TestModels.ipynb
+++ b/PIR_TestModels.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "[1385083 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "[137 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "9   1   4500  0.000683  0.000693  0.000695  63553"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -1146,7 +1146,7 @@
        "54   1  27000  0.000665  0.000691  0.000696  37540"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,16 +1298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1bfa0320be0>]"
+       "[<matplotlib.lines.Line2D at 0x260bd150c10>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1336,6 +1336,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_train_df['RUL_bin'] = pd.cut(data_train_df['RUL'], bins=bins, labels=labels)\n",
+    "data_test_df['RUL_bin'] = pd.cut(data_test_df['RUL'], bins=bins, labels=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -1347,16 +1357,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_train_df['RUL_bin'] = pd.cut(data_train_df['RUL'], bins=bins, labels=labels)\n",
-    "data_test_df['RUL_bin'] = pd.cut(data_test_df['RUL'], bins=bins, labels=labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1850,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1894,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -1917,14 +1917,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:AutoGraph could not transform <bound method TCN.call of <tcn.tcn.TCN object at 0x000001BFA0304580>> and will run it as-is.\n",
-      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
-      "Cause: module 'gast' has no attribute 'Index'\n",
-      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "WARNING: AutoGraph could not transform <bound method TCN.call of <tcn.tcn.TCN object at 0x000001BFA0304580>> and will run it as-is.\n",
-      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
-      "Cause: module 'gast' has no attribute 'Index'\n",
-      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
       "Model: \"model\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
@@ -1947,7 +1939,7 @@
       "_________________________________________________________________\n",
       "residual_block_7 (ResidualBl [(None, 30, 35), (None, 3 10012     \n",
       "_________________________________________________________________\n",
-      "lambda (Lambda)              (None, 35)                0         \n",
+      "lambda_4 (Lambda)            (None, 35)                0         \n",
       "_________________________________________________________________\n",
       "dense (Dense)                (None, 20)                720       \n",
       "=================================================================\n",
@@ -1960,18 +1952,18 @@
    ],
    "source": [
     "# load model from file\r\n",
-    "loaded_json = open('CNN_Model3_6/1000_structures_adaptiveLR_1_2/CNN_Model3_6_adaptiveLR_1.json', 'r').read()\r\n",
+    "loaded_json = open('CNN_Model3_6/9900_structures_adaptiveLR_1/CNN_Model3_6_adaptiveLR_1.json', 'r').read()\r\n",
     "loadedModel = model_from_json(loaded_json, custom_objects={'TCN': TCN})\r\n",
     "\r\n",
     "tcn_full_summary(loadedModel, expand_residual_blocks=False)\r\n",
     "\r\n",
     "# restore weights\r\n",
-    "loadedModel.load_weights('CNN_Model3_6/1000_structures_adaptiveLR_1_2/CNN_Model3_6_adaptiveLR_1_weights_epoch_485_val_accuracy_0.988296627998352.h5')"
+    "loadedModel.load_weights('CNN_Model3_6/9900_structures_adaptiveLR_1/Postprocessing/CNN_Model3_6_adaptiveLR_1_weights_epoch_474_val_accuracy_0.9913138747215271.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1995,14 +1987,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "181/181 - 2s - loss: 0.0454 - sparse_categorical_accuracy: 0.9886 - f1_m: 0.5348 - precision_m: 0.5348 - recall_m: 0.5348\n"
+      "181/181 - 2s - loss: 0.0304 - sparse_categorical_accuracy: 0.9905 - f1_m: 0.5238 - precision_m: 0.5238 - recall_m: 0.5238\n"
      ]
     }
    ],
@@ -2014,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -2023,11 +2015,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 0.04537719115614891\n",
-      "accuracy: 0.9885852932929993\n",
-      "f1_score: 0.534839928150177\n",
-      "precision: 0.5348399877548218\n",
-      "recall: 0.5348399877548218\n"
+      "loss: 0.030449729412794113\n",
+      "accuracy: 0.9904876947402954\n",
+      "f1_score: 0.5238010287284851\n",
+      "precision: 0.5238012075424194\n",
+      "recall: 0.5238012075424194\n"
      ]
     }
    ],
