Finished results section

--- a/PIR_TestModels.ipynb
+++ b/PIR_TestModels.ipynb
@@ -1304,7 +1304,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x260bd150c10>]"
+       "[<matplotlib.lines.Line2D at 0x203c3540c40>]"
       ]
      },
      "execution_count": 12,
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {
     "scrolled": true
    },
@@ -1923,47 +1923,41 @@
       "=================================================================\n",
       "input_1 (InputLayer)         [(None, 30, 3)]           0         \n",
       "_________________________________________________________________\n",
-      "residual_block_0 (ResidualBl [(None, 30, 35), (None, 3 5672      \n",
+      "layer_normalization (LayerNo (None, 30, 3)             60        \n",
       "_________________________________________________________________\n",
-      "residual_block_1 (ResidualBl [(None, 30, 35), (None, 3 10012     \n",
+      "conv1d (Conv1D)              (None, 30, 25)            700       \n",
       "_________________________________________________________________\n",
-      "residual_block_2 (ResidualBl [(None, 30, 35), (None, 3 10012     \n",
+      "conv1d_1 (Conv1D)            (None, 30, 25)            5650      \n",
       "_________________________________________________________________\n",
-      "residual_block_3 (ResidualBl [(None, 30, 35), (None, 3 10012     \n",
+      "conv1d_2 (Conv1D)            (None, 30, 25)            5650      \n",
       "_________________________________________________________________\n",
-      "residual_block_4 (ResidualBl [(None, 30, 35), (None, 3 10012     \n",
+      "conv1d_3 (Conv1D)            (None, 30, 25)            5650      \n",
       "_________________________________________________________________\n",
-      "residual_block_5 (ResidualBl [(None, 30, 35), (None, 3 10012     \n",
+      "flatten (Flatten)            (None, 750)               0         \n",
       "_________________________________________________________________\n",
-      "residual_block_6 (ResidualBl [(None, 30, 35), (None, 3 10012     \n",
-      "_________________________________________________________________\n",
-      "residual_block_7 (ResidualBl [(None, 30, 35), (None, 3 10012     \n",
-      "_________________________________________________________________\n",
-      "lambda_4 (Lambda)            (None, 35)                0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 20)                720       \n",
+      "dense (Dense)                (None, 20)                15020     \n",
       "=================================================================\n",
-      "Total params: 76,476\n",
-      "Trainable params: 38,940\n",
-      "Non-trainable params: 37,536\n",
+      "Total params: 32,730\n",
+      "Trainable params: 32,730\n",
+      "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
     "# load model from file\r\n",
-    "loaded_json = open('CNN_Model3_6/9900_structures_adaptiveLR_1/CNN_Model3_6_adaptiveLR_1.json', 'r').read()\r\n",
+    "loaded_json = open('CNN_Model1_3/1000_structures_adaptiveLR_1/CNN_Model1_3_adaptiveLR_1.json', 'r').read()\r\n",
     "loadedModel = model_from_json(loaded_json, custom_objects={'TCN': TCN})\r\n",
     "\r\n",
     "tcn_full_summary(loadedModel, expand_residual_blocks=False)\r\n",
     "\r\n",
     "# restore weights\r\n",
-    "loadedModel.load_weights('CNN_Model3_6/9900_structures_adaptiveLR_1/Postprocessing/CNN_Model3_6_adaptiveLR_1_weights_epoch_474_val_accuracy_0.9913138747215271.h5')"
+    "loadedModel.load_weights('CNN_Model1_3/1000_structures_adaptiveLR_1/Postprocessing/CNN_Model1_3_adaptiveLR_1_weights_epoch_500_val_accuracy_0.8238090872764587.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1987,14 +1981,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbX_test = [data_test[data_test['ID']==id][seq_cols].values[-sequence_length:] for id in data_test['ID'].unique()]\r\n",
+    "dbX_test = np.asarray(dbX_test)\r\n",
+    "\r\n",
+    "dbY_test = [data_test[data_test['ID']==id][seq_cols1].values[-1] for id in data_test['ID'].unique()]\r\n",
+    "dbY_test = np.asarray(dbY_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "181/181 - 2s - loss: 0.0304 - sparse_categorical_accuracy: 0.9905 - f1_m: 0.5238 - precision_m: 0.5238 - recall_m: 0.5238\n"
+      "4/4 - 0s - loss: 0.3756 - sparse_categorical_accuracy: 0.8400 - f1_m: 0.6329 - precision_m: 0.6329 - recall_m: 0.6329\n"
      ]
     }
    ],
@@ -2006,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 76,
    "metadata": {
     "scrolled": true
    },
@@ -2015,11 +2022,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 0.030449729412794113\n",
-      "accuracy: 0.9904876947402954\n",
-      "f1_score: 0.5238010287284851\n",
-      "precision: 0.5238012075424194\n",
-      "recall: 0.5238012075424194\n"
+      "loss: 0.3756057322025299\n",
+      "accuracy: 0.8399999737739563\n",
+      "f1_score: 0.6329300403594971\n",
+      "precision: 0.6329301595687866\n",
+      "recall: 0.6329301595687866\n"
      ]
     }
    ],
