Extended results table

--- a/final_report_tex/final-report.tex
+++ b/final_report_tex/final-report.tex
@@ -790,6 +790,12 @@ For the vanilla \gls{cnn} and \gls{tcn} models there is a steady increase in the
 		\hline
 		Number of training structures & $ 100 $ & $ 500 $ & $ 1000 $ & $ 100 $ & $ 500 $ & $ 1000 $ & $ 10000 $ \\
 		Validation accuracy & $ 0.783 $ & $ 0.835 $ & $ 0.824 $ & $ 0.814 $ & $ 0.984 $ & $ 0.993 $ & $ 0.991 $ \\
+		Testing accuracy & $ 0.82 $ & $ 0.84 $ & $ 0.84 $ & $ 0.82 $ & $ 0.98 $ & $ 0.99 $ & $ 1.00 $ \\
+		\multicolumn{8}{c}{} \\
+		Model type & \multicolumn{3}{c|}{Vanilla \gls{rnn}} & \multicolumn{3}{c}{\gls{lstm}} &  \multicolumn{3}{c}{\gls{gru}}\\
+		\hline
+		Number of training structures & $ 100 $ & $ 500 $ & $ 1000 $ & $ 100 $ & $ 500 $ & $ 1000 $ & $ 10000 $ \\
+		Validation accuracy & $ 0.783 $ & $ 0.835 $ & $ 0.824 $ & $ 0.814 $ & $ 0.984 $ & $ 0.993 $ & $ 0.991 $ \\
 		Testing accuracy & $ 0.82 $ & $ 0.84 $ & $ 0.84 $ & $ 0.82 $ & $ 0.98 $ & $ 0.99 $ & $ 1.00 $
 	\end{tabular}
 \end{table}
