--- a/final_report_tex/final-report.tex
+++ b/final_report_tex/final-report.tex
@@ -116,12 +116,14 @@ Email: anass.akrim@univ-tlse3.fr}
 % in the abstract
 \begin{abstract}
 	
-% At the end update abstract
+% Maybe the abstract is a bit to long?
+
 This paper aims to compare Deep Learning models to predict the \gls{rul} of a structure. These models are the following: the \gls{cnn} family with a \gls{cnn} and a \gls{tcn} architecture, the \glspl{rnn} family with a \gls{rnn}, a \glspl{lstm} and a \glspl{gru} architecture. 
 
 The dataset consists in simulations of the crack growth on plates, based on the Paris-Erdogan law. The training dataset is composed of 10,000 structures while the testing dataset is composed of 100 structures. Each architecture is optimized and trained on respectively 100, 500 and 1,000 structures from the taining dataset. At the end, the different models are compared on their evaluation on the testing dataset, on the basis of a metric which is the accuracy in our case.
 
 In order to optimize the architectures, a first step is to identify the fixed parameters, which do not have a significant impact on the accuracy, and the variable ones.  The variable hyperparameters are optimized with a Random Search Strategy for 100 and 500 structures for the \gls{rnn} family, the architure used for 1,000 structures being the one from the 500 structures optimization. For the \gls{cnn} family, the variable hyperparameters are optimized for 100, 500 and 1,000 structures. The optimized models are then trained with an adaptative learning rate on the three numbers of structures. The results show that within the \glspl{rnn} family, \gls{gru} gives the best result, while within the \glspl{cnn} family, the \gls{tcn} is the best model. Then, the results show that \gls{tcn} gives a better performance than \gls{gru} with an accuracy reaching $98$\%\ for 1,000 structures.
+
 \end{abstract}
 
 \IEEEpeerreviewmaketitle
@@ -175,7 +177,7 @@ The Paris-Erdogan Law is applied to an infinite plate with a central horizontal 
 	\label{fig:strain_gauge_positions}
 \end{figure}
 
-The crack length in the Paris-Erdogan Law is a function of: $k$ number of cylces, $\Delta \sigma$ stress range, $m, C$ material constants, $a_0$ initial crack length. By calculating the crack growth until the crack length $a$ reaches the critical crack length $a_{crit}=(\frac{K_{IC}}{\Delta \sigma \sqrt{\pi}})^2$ the simulation can determine the \gls{rul} for each simulated cycle. For the simulations the stress range $\Delta \sigma$ is kept constant while the initial crack length $a_0$ and the material parameters $m$ and $C$ are drawn from a normal distribution. $ 10000 $ structures are generated this way to form the training and validation dataset. For the testing dataset 100 structures are generated. The output of theses simulations which form the input for the deep learning models is a table matching the strains from the strain gauges to the \gls{rul} calculated by the simulations. To reduce the dataset the results are only saved to the table every 500 cycles. Table \ref{tab:sliding_window_approach} shows the structure of the generated training and validation dataset. The label $ ID $ denotes the specific structures.
+The crack length in the Paris-Erdogan Law is a function of: $k$ number of cylces, $\Delta \sigma$ stress range, $m, C$ material constants, $a_0$ initial crack length. By calculating the crack growth until the crack length $a$ reaches the critical crack length $a_{crit}=(\frac{K_{IC}}{\Delta \sigma \sqrt{\pi}})^2$ the simulation can determine the \gls{rul} for each simulated cycle. For the simulations the stress range $\Delta \sigma$ is kept constant while the initial crack length $a_0$ and the material parameters $m$ and $C$ are drawn from a normal distribution. $ 10000 $ structures are generated this way to form the training and validation dataset. For the testing dataset 100 structures are generated. The output of theses simulations which form the input for the deep learning models is a table matching the strains from the strain gauges to the \gls{rul} calculated by the simulations. To reduce the dataset the results are only saved to the table every 500 cycles. Table \ref{tab:sliding_window_approach} shows the structure of the generated training and validation dataset. The label $ ID $ denotes the specific structure.
 
 \begin{table}[htp]
 	\centering
@@ -202,23 +204,21 @@ The aim of this work is to predict the \gls{rul} based on current and past infor
 \subsection{Available Dataset}
 
 % Explanation of classification and preparation of dataset (Thomas)
-The provided datasets were separated in two distinguished parts, namely training and testing dataset. The first consists in 10,000 structures with different initial crack. All the models were trained on this dataset using only a part of it, respectively 100, 500 and 1,000 structures. While training, the last 100 structures of the training dataset were used as a validation dataset.
+The provided datasets were separated in two distinguished parts, namely training and testing dataset. The first consists in 10,000 structures with different initial crack lengths. Most of the models were trained on this dataset using only a part of it, respectively $ 100 $, $ 500 $ and $ 1 000 $ structures. While training, the last $ 100 $ structures of the training dataset were used as a validation dataset.
 
 Then, the 100 structures from the second dataset were used to evaluate the performances of our models.
 
 
-As it showed promising results in other applications of Deep Learning to \gls{phm} (\cite{Liu2019a, Xiao2016}), classification is an interesting alternative to regression for \gls{rul} prediction. Instead of trying to predict an exact \gls{rul} value the goal is to predict the correct \gls{rul} class with a lower and upper bound for the \gls{rul}. The generated dataset was composed of 80,000 cycles at most. Therefore the chosen strategy has been to create 20 intervals following a parabolic equation. The last class would be for a \gls{rul} over 80,000 cycles away.
-
+As it showed promising results in other applications of Deep Learning to \gls{phm} (\cite{Liu2019a, Xiao2016}), classification is an interesting alternative to regression for \gls{rul} prediction. Instead of trying to predict an exact \gls{rul} value the goal is to predict the correct \gls{rul} class with a lower and upper bound for the \gls{rul}. The generated dataset was composed of $ 80 000 $ cycles at most. Therefore the chosen strategy has been to create $ 20 $ intervals following a parabolic equation (see Figure \ref{fig:RNN_classification}). The last of the $ 20 $ classes is for all \gls{rul} values greater than $ 80 000 $ cycles.
 
 \begin{figure}[htp]
 	\centering
 	\includegraphics[width=6cm]{RUL_Classification.png}
 	\caption{\gls{rul} classification strategy}
-	\label{fig:RNN-classification}
+	\label{fig:RNN_classification}
 \end{figure}
 
-
-To prepare the data for the \gls{cnn} a sliding window approach was used. This approach maps the \gls{rul} at time $ t $ onto the current and past time steps of the input features $ [x_{t-N+1}, x_{t-N+2},..., x_{t-1}, x_t] $ where $ N $ is the length of the sliding window. The resulting input matrix therefore has the dimension $ (n-N) \times N \times k $ where $ n $ is the number of samples and $ k $ is the number of features. Figure \ref{fig:input_matrix} shows an example of how the time series data of the strain gauges from Table \ref{tab:sliding_window_approach} is mapped to the input matrix.
+To prepare the data as an input and output for the networks a sliding window approach is used. This approach maps the \gls{rul} at time $ t $ onto the current and past time steps of the input features $ [x_{t-N+1}, x_{t-N+2},..., x_{t-1}, x_t] $ where $ N $ is the length of the sliding window. The resulting input matrix therefore has the dimension $ (n-N) \times N \times k $ where $ n $ is the number of samples and $ k $ is the number of features. Figure \ref{fig:input_matrix} shows an example of how the time series data of the strain gauges from Table \ref{tab:sliding_window_approach} is mapped to the input matrix.
 
 \begin{figure}[htp]
 	\centering
@@ -236,7 +236,7 @@ The output matrix shown in Figure \ref{fig:output_matrix} is only one dimensiona
 	\label{fig:output_matrix}
 \end{figure}
 
-As an input for the different models, datasets had to be normalized. While a specific layer was added at the beggining of \gls{cnn} and \gls{tcn} architectures to do so, the preprocessed data had to be normalized before being fed to the \glspl{rnn} models.
+As an input for the different models, datasets had to be normalized. While a specific layer was added at the beginning of \gls{cnn} architectures to do so, the preprocessed data had to be normalized before being fed to the \gls{rnn} models.
 
 % Add details on the explanation of the RNN Deep Learning models (Thomas)
 
@@ -275,7 +275,7 @@ Then, a simple \gls{rnn} architecture will be explored to evaluate the possible 
 
 Recent results suggest that \glspl{cnn} can match or even outperform \glspl{rnn} in time series related tasks \cite{Bai2018}. The second major focus of this work are therefore \gls{cnn} models.
 
-The common \gls{cnn} models deal with 2-Dimensional data as input such as pictures. The time sequence data used for \gls{phm} is in 1-Dimensional format. For this application 1D-\gls{cnn} have been introduced. The key differences between them and the 2D-\glspl{cnn} are that their input data is reduced by one dimension and the convolution filter only slides in one dimension \cite{Akrim2021}. Figure \ref{fig:1D_cnn_architecture} shows an example of a simple \gls{cnn} architecture with an illustration of the filter sliding over the time series. 
+The common \gls{cnn} models deal with 2-Dimensional data as input such as pictures. The time sequence data used for \gls{phm} is in 1-Dimensional format. For this application 1D-\gls{cnn} have been introduced. In the following this type of architecture is also called vanilla \gls{cnn}. The key differences between them and the 2D-\glspl{cnn} are that their input data is reduced by one dimension and the convolution filter only slides in one dimension \cite{Akrim2021}. Figure \ref{fig:1D_cnn_architecture} shows an example of a simple \gls{cnn} architecture with an illustration of the filter sliding over the time series. 
 
 \begin{figure}[htp]
 	\centering
@@ -363,6 +363,8 @@ After the optimum parameters for a model are found the model can be further impr
 \noindent
 \subsection{Model architectures}
 
+All \glspl{rnn} architectures were based on the same template. The dataset being noramlized before being fed to the models, there were no need for a specific layer of normalization. A flexible number of layers were implemented in the networks, as well as the number of cells in each layer, scaled by a power of 2. A possible dropout and recurrent dropout could also be added for each layer. At the end of the architecture, a dense layer with 20 units were added in order to match the number of \gls{rul} classes $ C = 20 $.  
+
 Based on the \gls{cnn} architecture of Li et al. \cite{Li2018} which was used for aero-engine \gls{rul} prediction a vanilla \gls{cnn} architecture is generated. The first layer of the architecture is for layer normalization. Afterwards a flexible number of 1D-convolutional layers is added which all have the same number of filters and an identical kernel size. The output of the convolutional layers is flattend before the final dense output layer which has $ 20 $ nodes to match the number of \gls{rul} classes $ C = 20 $. As an example Figure \ref{fig:cnn_architecture_1000_structures} shows the final architecture after the hyperparameter optimization with 1000 training structures.
 
 \begin{figure}[htp]
@@ -374,8 +376,6 @@ Based on the \gls{cnn} architecture of Li et al. \cite{Li2018} which was used fo
 
 A \gls{tcn} architecture template is generated based on the results of Liu et al. \cite{Liu2019} who used the network for \gls{rul} prediction of roller bearings. The architecture consists of multiple \gls{tcn} residual blocks with a dilation increasing with multiples of 2 with the first layer having a dilation of $ d = 1 $. Each block features the same number of filters with an identical kernel size. The next layer after the \gls{tcn} blocks is the dense output layer which has $ 20 $ nodes to match the number of \gls{rul} classes $ C = 20 $. The skip connection layer is activated for all residual blocks.
 
-All \glspl{rnn} architectures were based on the same template. The dataset being noramlized before being fed to the models, there were no need for a specific layer of normalization. A flexible number of layers were implemented in the networks, as well as the number of cells in each layer, scaled by a power of 2. A possible dropout and recurrent dropout could also be added for each layer. At the end of the architecture, a dense layer with 20 units were added in order to match the number of \gls{rul} classes $ C = 20 $.  
-
 % Give an overview of the results of the hyperparameter optimisation strategies for the rnn and cnn networks (Paul and Thomas)
 
 \noindent
@@ -383,7 +383,70 @@ All \glspl{rnn} architectures were based on the same template. The dataset being
 
 The hyperparameter optimization is performed using random search as described in \ref{sec:methods}. The used training dataset consists of $ 100 $, $ 500 $ or $ 1000 $ structures. For validation always $ 100 $ structures different to the training structures are used. The model selection is based on the accuracy of the models on the validation dataset. Not all available parameters of the networks are considered for the optimization as that would increase the computational effort drastically. The reduction also helps to shift the focus of the optimization on the important parameters and avoid varying parameters which have no or only little influence on the accuracy of the network.
 
-\subsubsection{\gls{cnn} and \gls{tcn} hyperparameters optimization}
+\subsubsection{\gls{rnn}, \gls{lstm} and \gls{gru} hyperparameters optimization}
+
+Following the same method used for the \gls{cnn} and \gls{tcn} hyperparameters optimization, fixed parameters were previously set for each architecture, to avoid searching for hyperparameters which would not be relevant in the accuracy improvement. Those fixed parameters are the same for the \gls{rnn}, \gls{lstm} and \gls{gru} architectures, and can be found in Table \ref{tab:fixed_parameters_rnn_optimization}.
+
+
+\begin{table}[htp]
+	\centering
+	\caption{Fixed parameters for \gls{rnn} hyperparameters optimization}
+	\label{tab:fixed_parameters_rnn_optimization}
+	\begin{tabular}{ll}
+		\textbf{Parameter} & \textbf{Value} \\
+		\hline
+		Batch size & $ 4096 $ \\
+		Activation function & ReLU \\
+		Epochs & $ 500 $ \\
+		Sequence length & $ 30 $ 
+	\end{tabular}
+\end{table}
+
+
+Once those parameters fixed, usefull hyperparameters were identified. These are the ones which can have a significant impact on the accuracy improvement. They were identified on $ 100 $ structures, and then reused for $ 500 $ structures. Due to a lack of time, only the best architecture identified from the optimization on $ 500 $ structures was used to train on $ 1000 $ structures, and then evaluate the performance. It appeared that the variable hyperparameters to try were the same for \gls{rnn}, \gls{lstm} and \gls{gru}. They can be found in Table \ref{tab:variable_parameters_rnn_optimization}.
+
+\begin{table}[htp]
+	\centering
+	\caption{Variable parameters for vanilla \gls{cnn} hyperparameter optimization}
+	\label{tab:variable_parameters_rnn_optimization}
+	\begin{tabular}{ll}
+		\textbf{Parameter} & \textbf{Value set} \\
+		\hline
+		Number of hidden layers & $ \{1, 2, 3\} $ \\
+		Number of cells per layer & $ \{32, 64, 128, 256\} $ \\
+		Dropout rate & $ \{0, 0.1\} $ \\
+		Recurrent Dropout rate & $ \{0, 0.1\} $ \\
+		Learning rate & $ \{10^{-2}, 10^{-3}\} $
+	\end{tabular}
+\end{table}
+
+The Random Search strategy were then used to optimize those hyperparameters on $ 100 $ structures and $ 500 $ structures, with a fixed sliding window size of $30$. The Learning Rate is not reported for the Fine Tuning will use an adaptative Learning Rate strategy to optimize the performance of the final training. The results of hyperparameters optimization can be found in Table \ref{tab:results_parameters_rnn_optimization} for both \gls{rnn}, \gls{lstm} and \gls{gru}.
+
+
+
+\begin{table}[htp]
+	\centering
+	\caption{Results of the hyperparameters optimization for $ 100 $ and $ 500 $ structures}
+	\label{tab:results_parameters_rnn_optimization}
+	\begin{tabular}{p{2.5cm}|lll|lll}
+		Training structures & \multicolumn{3}{c}{$ 100 $} & \multicolumn{3}{c}{$ 500 $} \\
+		\hline
+		Type of architecture & \gls{rnn} & \gls{lstm} & \gls{gru} & \gls{rnn} & \gls{lstm} & \gls{gru}\\
+		\hline
+		Number of hidden layers & $3$ & $2$ & $3$ & $3$ & $2$ & $2$ \\
+		Number of cells per layer & $32$ & $64$ & $256$ & $32$ & $128$ & $256$ \\
+		Dropout rate & $0$ & $0$ & $0$ & $0$ & $0$ & $0$ \\
+		Recurrent Dropout rate & $0$ & $0$ & $0$& $0$ & $0$ & $0$ \\
+		\hline
+		Validation accuracy & $0.752$ & $0.688$ & $0.726$ & $0.871$ & $0.700$ & $0.814$
+	\end{tabular}
+\end{table}
+
+
+It then can be then understood that \glspl{rnn} do not need many layers to get a good accuracy compared to \gls{cnn}. The best accuracy can be found with no more than 2 or 3 layers in this case. Indeed, too many layers and cells for this amount of data might lead the model to loose itself, along with the fact that the computational time increases drastically. The Dropout and Recurrent Dropout rates were optimized at 0\%\ meaning that the models did not overfit for this range of structures. This result is better visible as the validation accuracy follows the training accuracy on the Fine Tuning in Figure \ref{fig:accuracy_100_structures_fine_tuning_rnn}, \ref{fig:accuracy_500_structures_fine_tuning_rnn} and \ref{fig:accuracy_1000_structures_fine_tuning_rnn}.
+
+\subsubsection{Vanilla \gls{cnn} and \gls{tcn} hyperparameters optimization}
+
 Table \ref{tab:fixed_parameters_cnn_optimization} lists the fixed parameters of the vanilla \gls{cnn} optimization. The sliding window length includes multiple values as the influence of that parameter is studied by performing multiple optimization runs with different lengths of the sliding window.
 
 \begin{table}[htp]
@@ -588,75 +651,11 @@ Figure \ref{fig:accuracy_500_1000_structures_random_search_CNN} shows the traini
 \end{figure}
 
 
-
-
-\subsubsection{\gls{rnn}, \gls{lstm} and \gls{gru} hyperparameters optimization}
-Following the samed method used for the \gls{cnn} and \gls{tcn} hyperparameters optimization, fixed parameters were previously set for each architecture, to avoid searching for hyperparameters which would not be relevant in the accuracy improvement. Those fixed parameters are the same for the \gls{rnn}, \gls{lstm} and \gls{gru} architectures, and can be found in Table \ref{tab:fixed_parameters_rnn_optimization}.
-
-
-\begin{table}[htp]
-	\centering
-	\caption{Fixed parameters for \gls{rnn} hyperparameters optimization}
-	\label{tab:fixed_parameters_rnn_optimization}
-	\begin{tabular}{ll}
-		\textbf{Parameter} & \textbf{Value} \\
-		\hline
-		Batch size & $ 4096 $ \\
-		Activation function & ReLU \\
-		Epochs & $ 500 $ \\
-		Sequence length & $ 30 $ 
-	\end{tabular}
-\end{table}
-
-
-Once those parameters fixed, usefull hyperparameters were identified. These are the ones which can have a significant impact on the accuracy improvement. They were identified on $ 100 $ structures, and then reused for $ 500 $ structures. Due to a lack of time, only the best architecture identified from the optimization on $ 500 $ structures was used to train on $ 1000 $ structures, and then evaluate the performance. It appeared that the variable hyperparameters to try were the same for \gls{rnn}, \gls{lstm} and \gls{gru}. They can be found in Table \ref{tab:variable_parameters_rnn_optimization}.
-
-\begin{table}[htp]
-	\centering
-	\caption{Variable parameters for vanilla \gls{cnn} hyperparameter optimization}
-	\label{tab:variable_parameters_rnn_optimization}
-	\begin{tabular}{ll}
-		\textbf{Parameter} & \textbf{Value set} \\
-		\hline
-		Number of hidden layers & $ \{1, 2, 3\} $ \\
-		Number of cells per layer & $ \{32, 64, 128, 256\} $ \\
-		Dropout rate & $ \{0, 0.1\} $ \\
-		Recurrent Dropout rate & $ \{0, 0.1\} $ \\
-		Learning rate & $ \{10^{-2}, 10^{-3}\} $
-	\end{tabular}
-\end{table}
-
-The Random Search strategy were then used to optimize those hyperparameters on $ 100 $ structures and $ 500 $ structures, with a fixed sliding window size of $30$. The Learning Rate is not reported for the Fine Tuning will use an adaptative Learning Rate strategy to optimize the performance of the final training. The results of hyperparameters optimization can be found in Table \ref{tab:results_parameters_rnn_optimization} for both \gls{rnn}, \gls{lstm} and \gls{gru}.
-
-
-
-\begin{table}[htp]
-	\centering
-	\caption{Results of the hyperparameters optimization for $ 100 $ and $ 500 $ structures}
-	\label{tab:results_parameters_rnn_optimization}
-	\begin{tabular}{p{2.5cm}|lll|lll}
-		Training structures & \multicolumn{3}{c}{$ 100 $} & \multicolumn{3}{c}{$ 500 $} \\
-		\hline
-		Type of architecture & \gls{rnn} & \gls{lstm} & \gls{gru} & \gls{rnn} & \gls{lstm} & \gls{gru}\\
-		\hline
-		Number of hidden layers & $3$ & $2$ & $3$ & $3$ & $2$ & $2$ \\
-		Number of cells per layer & $32$ & $64$ & $256$ & $32$ & $128$ & $256$ \\
-		Dropout rate & $0$ & $0$ & $0$ & $0$ & $0$ & $0$ \\
-		Recurrent Dropout rate & $0$ & $0$ & $0$& $0$ & $0$ & $0$ \\
-		\hline
-		Validation accuracy & $0.752$ & $0.688$ & $0.726$ & $0.871$ & $0.700$ & $0.814$
-	\end{tabular}
-\end{table}
-
-
-It then can be then understood that \glspl{rnn} do not need many layers to get a good accuracy compared to \gls{cnn}. The best accuracy can be found with no more than 2 or 3 layers in this case. Indeed, too many layers and cells for this amount of data might lead the model to loose itself, along with the fact that the computational time increases drastically. The Dropout and Recurrent Dropout rates were optimized at 0\%\ meaning that the models did not overfit for this range of structures. This result is better visible as the validation accuracy follows the training accuracy on the Fine Tuning in Figure \ref{fig:accuracy_100_structures_fine_tuning_rnn}, \ref{fig:accuracy_500_structures_fine_tuning_rnn} and \ref{fig:accuracy_1000_structures_fine_tuning_rnn}.
-
-
-
 \subsection{Fine Tuning}
 
-As the hyperparameters were optimized, the resulting models had to be trained with an adaptative Learning rate to optimize their performance. \gls{lrdecay} started with a Learning rate of $10^{-2}$, decreasing to $10^{-3}$, $10^{-4}$ and then $10^{-5}$. With each Learning rate, models were trained on a maximum of $500$ epochs which leads to a training with a maximum of 2,000 epochs. 
+As the hyperparameters were optimized, the resulting models had to be trained with an adaptative Learning rate to optimize their performance. The models are further refined on the same dataset on which the optimization was performed. \gls{lrdecay} starts with a learning rate of $10^{-2}$ or $10^{-3}$ depending on which value was choosen in the hyperparameter optimization, decreasing to $10^{-3}$, $10^{-4}$ and then $10^{-5}$. With each Learning rate, models were trained on a maximum of $ 500 $ epochs which leads to a training with a maximum of $ 2 000 $ epochs. After the fine tuning the models are tested on the testing dataset to evaluate their final performance.
 
+\subsubsection{\gls{rnn}, \gls{lstm} and \gls{gru} fine tuning}
 
 For the \gls{rnn}, \gls{lstm} and \gls{gru} the results for the history of the training can be found in Figures \ref{fig:accuracy_100_structures_fine_tuning_rnn}, \ref{fig:accuracy_500_structures_fine_tuning_rnn} and \ref{fig:accuracy_1000_structures_fine_tuning_rnn}. It can be clearly observed that the adaptative learning rate strategy allows a better training for each model. Once the models trained, they were evaluated on the testing dataset. All the results for the validation accuracy and the testing accuracy can be found in Tables \ref{tab:results_fine_tuning_100_rnn}, \ref{tab:results_fine_tuning_500_rnn} and \ref{tab:results_fine_tuning_1000_rnn}. It can be noticed that the difference between the validation accuracy and the testing accuracy is notable. This could be the classification scaling which gives a larger bandwith on the last classes, while the testing dataset focuses more on the first calsses, which are smaller. This leads to an increasing possibilty of wrong prediction of the \gls{rul} on the testing dataset. One lead to explore would be then to adapt the metric to take into account this evolution of the classes bandwidth.
 
@@ -694,9 +693,6 @@ For the \gls{rnn}, \gls{lstm} and \gls{gru} the results for the history of the t
 	\label{fig:accuracy_1000_structures_fine_tuning_rnn}
 \end{figure}
 
-
-
-
 \begin{table}[htp]
 	\centering
 	\caption{Results of the fine tunning for $ 100 $ structures}
@@ -712,7 +708,6 @@ For the \gls{rnn}, \gls{lstm} and \gls{gru} the results for the history of the t
 	\end{tabular}
 \end{table}
 
-
 \begin{table}[htp]
 	\centering
 	\caption{Results of the fine tunning for $ 500 $ structures}
@@ -727,8 +722,6 @@ For the \gls{rnn}, \gls{lstm} and \gls{gru} the results for the history of the t
 		Testing accuracy & $0.90$ & $0.832$ & $0.765$
 	\end{tabular}
 \end{table}
-
-
 
 \begin{table}[htp]
 	\centering
@@ -748,7 +741,9 @@ For the \gls{rnn}, \gls{lstm} and \gls{gru} the results for the history of the t
 
 % Show the detailed results of the fine tuning of some networks (Paul and Thomas)
 
-For each of the best identified network architectures of the vanilla \gls{cnn} and \gls{tcn} hyperparameter optimizations further training with \gls{lrdecay} is performed to improve the performance. The models are further refined on the same dataset on which the optimization was performed. For the models which were trained on $ 100 $ structures the models with a sliding window length of $ 30 $ are choosen for futher refinement. The optimization runs are started with the learning rate which was used in the hyperparameter optimization for the best model. From there it is decreased in steps of a decade until a learning rate of $ 10^{-5} $ is reached. The models are trained for $ 500 $ epochs with each learning rate. After the fine tuning the models are tested on the testing dataset to evaluate their final performance.
+\subsubsection{Vanilla \gls{cnn} and \gls{tcn} fine tuning}
+
+For each of the best identified network architectures of the vanilla \gls{cnn} and \gls{tcn} hyperparameter optimizations further training with \gls{lrdecay} is performed to improve the performance. For the models which were optimized on $ 100 $ structures the models with a sliding window length of $ 30 $ are choosen for futher refinement.
 
 Figure \ref{fig:accuracy_adaptiveLR_CNN} depicts the training history for the fine tuning on $ 100 $, $ 500 $ and $ 1000 $ structures. The networks show little to now overfitting on the training dataset. There is steady improvement of the accuracy towards convergence except for the training on $ 500 $ structures which shows a steep drop at around $ 500 $ epochs.
 
@@ -778,11 +773,15 @@ Figure \ref{fig:accuracy_adaptiveLR_CNN} depicts the training history for the fi
 	\label{fig:accuracy_adaptiveLR_TCN}
 \end{figure}
 
+\subsubsection{Model comparison}
+
 % Compare the rnn and cnn results (Paul and Thomas)
 
 As a final validation all the fine tuned models are tested with the testing dataset of $ 100 $ structures. Table \ref{tab:accuracy_testing_rnn_cnn} shows an overview of the achieved accuracy for all \gls{rnn} (Vanilla \gls{rnn}, \gls{lstm} and \gls{gru}) and \gls{cnn} models (Vanilla \glspl{cnn} and \glspl{tcn}).
 
 For the vanilla \gls{cnn} and \gls{tcn} models there is a steady increase in the achieved accuracy on the testing set if the amount of structures for training is increased. The increase in testing accuracy corresponds largely to the increase in validation accuracy. The testing accuracy is in the same order of magnitude as the validation accuracy indicating that the networks generalize well to new sets of data. In general \glspl{tcn} work better than \glspl{cnn} especially on the larger datasets of $ 500 $ and $ 1000 $ structures where the \gls{tcn} achieves close to $ 100 \% $ accuracy. When trained on the complete dataset the \gls{tcn} achieved $ 100 \% $ accuracy on the testing dataset.
+
+% Update results in table below
 
 \begin{table}[htp]
 	\centering
@@ -793,15 +792,20 @@ For the vanilla \gls{cnn} and \gls{tcn} models there is a steady increase in the
 		Model type & \multicolumn{3}{c|}{Vanilla \gls{cnn}} & \multicolumn{4}{c}{\gls{tcn}} \\
 		\hline
 		Number of training structures & $ 100 $ & $ 500 $ & $ 1000 $ & $ 100 $ & $ 500 $ & $ 1000 $ & $ 10000 $ \\
-		Validation accuracy & $ 0.783 $ & $ 0.835 $ & $ 0.824 $ & $ 0.814 $ & $ 0.984 $ & $ 0.993 $ & $ 0.991 $ \\
+		Validation accuracy & $ 0.78 $ & $ 0.84 $ & $ 0.82 $ & $ 0.81 $ & $ 0.98 $ & $ 0.99 $ & $ 0.99 $ \\
 		Testing accuracy & $ 0.82 $ & $ 0.84 $ & $ 0.84 $ & $ 0.82 $ & $ 0.98 $ & $ 0.99 $ & $ 1.00 $ \\
-		\multicolumn{8}{c}{} \\
-		Model type & \multicolumn{3}{c|}{Vanilla \gls{rnn}} & \multicolumn{3}{c}{\gls{lstm}} &  \multicolumn{3}{c}{\gls{gru}}\\
-		\hline
-		Number of training structures & $ 100 $ & $ 500 $ & $ 1000 $ & $ 100 $ & $ 500 $ & $ 1000 $ & $ 10000 $ \\
-		Validation accuracy & $ 0.783 $ & $ 0.835 $ & $ 0.824 $ & $ 0.814 $ & $ 0.984 $ & $ 0.993 $ & $ 0.991 $ \\
-		Testing accuracy & $ 0.82 $ & $ 0.84 $ & $ 0.84 $ & $ 0.82 $ & $ 0.98 $ & $ 0.99 $ & $ 1.00 $
+		\multicolumn{8}{c}{}
 	\end{tabular}
+
+	\setlength{\tabcolsep}{2pt} % Default value: 6pt
+	\begin{tabular}{p{2.5cm}|lll|lll|lll}
+		Model type & \multicolumn{3}{c|}{Vanilla \gls{rnn}} & \multicolumn{3}{c|}{\gls{lstm}} &  \multicolumn{3}{c}{\gls{gru}}\\
+		\hline
+		Number of training structures & $ 100 $ & $ 500 $ & $ 1000 $ & $ 100 $ & $ 500 $ & $ 1000 $ & $ 100 $ & $ 500 $ & $ 1000 $ \\
+		Validation accuracy & $ 0.78 $ & $ 0.83 $ & $ 0.84 $ & $ 0.81 $ & $ 0.98 $ & $ 0.99 $ & $ 0.78 $ & $ 0.85 $ & $ 0.824 $ \\
+		Testing accuracy & $ 0.82 $ & $ 0.84 $ & $ 0.84 $ & $ 0.82 $ & $ 0.98 $ & $ 0.99 $ & $ 0.73 $ & $ 0.83 $ & $ 0.82 $
+	\end{tabular}
+
 \end{table}
 
 
@@ -809,8 +813,15 @@ For the vanilla \gls{cnn} and \gls{tcn} models there is a steady increase in the
 \label{sec:conclusions}
 
 % Give an overview of the general results of the study
+All choosen models could successfully be trained on the available dataset and achieve an accuracy of at least $ 70 \% $ on the testing dataset. It usually was the case that more available training data leads to a better performance of the models. The best performance in general was achieved by \gls{tcn} models. Confirming the recent results of other researchers like Bai et al. \cite{\cite{Bai2018}} and Li et al. \cite{Li2018}. This again questions the general practice to use \gls{rnn} models as a standard for time series prediction while \gls{cnn} models should be used for image classification. The \gls{tcn} models when trained on more than $ 500 $ structures achieved closed to $ 100 \% $ accuracy confirming their excellent suitability to time series prediction problems.
+
+The good results achieved on this dataset should come at no surprise as the dataset is synthetic without the flaws of real word data. There is no noise in the data which would never be the case in reality. The virtual strain gauges are always placed at the exact same location while in reality there is always a position tolerance when placing them on a structure.
+
+% Write about to much data etc.
 
 % List the results of the best models and justify the choice for a best model
+
+
 
 % Compare the final results with the aims set at the beginning
 
