--- a/final_report_tex/acronyms.tex
+++ b/final_report_tex/acronyms.tex
@@ -8,5 +8,5 @@
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{tcn}{TCN}{Temporal Convolutional Network}
 \newacronym{erm}{ERM}{Elman Recurrent Network}
-\newacronym{mlp}{MLP}{Machine Learning Program}
+\newacronym{mlp}{MLP}{Multilayer Perceptron}
 \newacronym{lrdecay}{lrDecay}{learning rate decay}
